# Desktop-mcp

./: ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_PROGRESS.md  README.md  TRANSFORMATION_SUMMARY.md  main.py  pyproject.toml  run_desktop_mcp.py  test_mcp.py
src/desktop_mcp/: __init__.py  automation.py  server.py
src/desktop_mcp/core/: app.py  command_parser.py  plugin_manager.py
src/desktop_mcp/tools/: base_tool.py
src/desktop_mcp/utils/: __init__.py  config.py  logging.py
