[project]
name = "desktop-mcp"
version = "1.0.0"
description = "Desktop automation through the Model Context Protocol - AI assistant for managing your PC"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Desktop MCP", email = "desktop@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
desktop-mcp = "desktop_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/yourusername/desktop-mcp"
"Bug Tracker" = "https://github.com/yourusername/desktop-mcp/issues"
